# stgn

./: .gitignore  Cargo.toml  Makefile  README.md  app.js  index.html
.github/workflows/: deploy.yaml
docs/: app.js  index.html  style.css
pkg/: stgn_wasm.d.ts  stgn_wasm.js  stgn_wasm_bg.wasm.d.ts
src/: decoder.rs  encoder.rs  lib.rs  main.rs  utils.rs
stgn/: Cargo.toml
stgn-cli/: Cargo.toml
stgn-cli/src/: main.rs
stgn-wasm/: Cargo.toml
stgn-wasm/src/: lib.rs
stgn/src/: lib.rs  main.rs
stgn/src/core/: auth.rs  data.rs  decoder.rs  encoder.rs  header.rs  mod.rs
stgn/src/embedding/: jpeg.rs  mod.rs  pdf.rs
stng/: Cargo.toml
stng-wasm/: Cargo.toml
stng-wasm/src/: lib.rs
stng/src/: auth.rs  decoder.rs  encoder.rs  header.rs  lib.rs  main.rs
